<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tViewLogin"
        android:text="@string/input_weight"
        style="@style/inputfields"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"></TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="24dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="30dp"
                android:id="@+id/edname_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_below="@+id/writing_account_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/name">

                <EditText
                    android:id="@+id/ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:id="@+id/edWeight_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_below="@+id/writing_account_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/weight">

                <EditText
                    android:id="@+id/ed_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:layout_width="100dp"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSubmittodb"
                android:text="@string/submit"
                android:backgroundTint="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"></Button>
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonupdatetodb"
                android:text="@string/update"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"></Button>
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/btndelete"
                android:text="@string/delete_record"
                android:backgroundTint="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"></Button>
        </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>